# glowing-octo-robot

./: .gitignore  AGENTS.md  AUTHORS.md  LICENSE  README.md  pyproject.toml
src/: main.py
src/controller/: main_controller.py
src/image_partition/: main.py
src/image_partition/controller/: main_controller.py
src/image_partition/domain/: clip_service.py  grouping.py
src/image_partition/ui/: main_window.ui  main_window_ui.py
src/ui/: main_window.ui
tests/: test_clip_service.py  test_grouping.py  test_partition.py  test_ui.py
